--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.20.1",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-vue": "^0.11.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-swatches": "^2.1.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
