--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-vue": "^0.11.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-swatches": "^2.1.0",
+    "vuetify": "^2.3.21",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -31,6 +31,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-vuetify": "~2.0.8",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   }
 }
